[package]
name = "ssh-manager"
version = "0.1.0"
edition = "2018"

[dependencies]
fs = "*"
dirs = "*"
serde_json = "*"
dialoguer = "*"
serde = { version = "1.0.129", features = ["derive"] }
clap = "*"
execute = "*"
i18n-embed = { version = "*", features = ["fluent-system", "desktop-requester"]}
once_cell = "*"
lazy_static = "1.4"
